fix broken wishlist on safari

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -794,8 +794,12 @@ li {
   width: 1.5rem;
 }
 
-.w-40 {
-  width: 10rem;
+.w-64 {
+  width: 16rem;
+}
+
+.w-32 {
+  width: 8rem;
 }
 
 .w-\[120px\] {
@@ -806,28 +810,8 @@ li {
   width: 24rem;
 }
 
-.w-32 {
-  width: 8rem;
-}
-
-.w-64 {
-  width: 16rem;
-}
-
 .min-w-\[350px\] {
   min-width: 350px;
-}
-
-.min-w-\[500px\] {
-  min-width: 500px;
-}
-
-.min-w-\[400px\] {
-  min-width: 400px;
-}
-
-.min-w-\[600px\] {
-  min-width: 600px;
 }
 
 .max-w-5xl {
@@ -858,6 +842,23 @@ li {
 .-translate-y-1\/2 {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.auto-cols-auto {
+  grid-auto-columns: auto;
+}
+
+.auto-rows-fr {
+  grid-auto-rows: minmax(0, 1fr);
+}
+
+.auto-rows-auto {
+  grid-auto-rows: auto;
+}
+
+.auto-rows-max {
+  grid-auto-rows: -webkit-max-content;
+  grid-auto-rows: max-content;
 }
 
 .flex-row {
@@ -1268,10 +1269,6 @@ li {
 
   .sm\:max-h-\[250px\] {
     max-height: 250px;
-  }
-
-  .sm\:w-auto {
-    width: auto;
   }
 
   .sm\:grid-cols-2 {
